fix layout issue in accounts dashboard

--- a/client/src/sass/dashboard.scss
+++ b/client/src/sass/dashboard.scss
@@ -436,7 +436,7 @@ $textColor:rgba(0,0,0,0.85);
 }
 
 .uncleared-invoices-panel {
-    height: calc(100% - 46px - 1em);
+    height: 29em;
     margin-top: 1em;
 
     .panel-header {
